force-app/main/default/objects/Product_Sales_Area__c/Product_Sales_Area__c.object-meta.xml
<CustomObject>
    <label>Product Sales Area</label>
    <nameField>
        <label>Product Sales Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sales Areas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>