force-app/main/default/objects/Product_Sales_Area__c/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <description>Prodcut category group</description>
    <label>Category Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>