force-app/main/default/objects/Product_Sales_Area__c/fields/Distribution_Chain_Specific_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Chain_Specific_Status__c</fullName>
    <description>Distribution chain specific status field</description>
    <label>Distribution Chain Specific Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>