force-app/main/default/objects/Product_Sales_Area__c/fields/ERP_Product_Sales_Area_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Sales_Area_Id__c</fullName>
    <description>ERP product sales area Id field</description>
    <externalId>true</externalId>
    <label>ERP Product Sales Area Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>