force-app/main/default/objects/Product_Sales_Area__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Lookup to product</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Sales Area</relationshipLabel>
    <relationshipName>Product_Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>